# gffx

./: .gitignore  README.md  pyproject.toml
src/gffx/: __init__.py  __main__.py  utils.py
src/gffx/io/: __init__.py
src/gffx/ray/: __init__.py
tests/: test_sample.py
