[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "gffx"
version = "0.1.0"
description = "A minimal graphics library for PyTorch"
authors = [
    { name = "Danzel Serrano", email = "danzel.serrano@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch"
]

[project.urls]
# "Homepage" = "https://example.com"
# "Repository" = "https://github.com/yourusername/your-repo"
# "Documentation" = "https://example.com/docs"